--- a/index.html
+++ b/index.html
@@ -1,323 +1,327 @@
+<html>
+  <head>
+    <title>Relationship Stories</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+  </head>
+  <body>
+    <center>
+      <div class="box">
+        <h3 class="top">Relationship Stories</h3>
+        <center>
+          <div class="icon" title="icon">
+            <div class="spanbox">
+              <span>1</span>
+            </div>
+          </div>
+          <h4 class="name">Hayase Yuuka</h4>
+          <h4 class="subname">Responsible Spending</h4>
+          <hr>
+          <hr>
+          <div class="stripbox">
+            <h3 class="strip">Relationship Story Reward</h3>
+          </div>
+          <div class="pyrocont">
+            <div class="pyrotext">x20</div>
+            <img class="pyro" src="https://static.miraheze.org/bluearchivewiki/3/3b/Currency_Icon_Gem.png" alt="Pyroxene">
+          </div>
+          <div class="popup1">
+            <h3 class="poptop">Pyroxene</h3>
+            <hr>
+            <p class="poptext">These mystical gems can be purchased with Sensei's credit card. Trade them for various products.</p>
+          </div>
+          <div class="pyrocont">
+            <div class="pyrotext">x1</div>
+            <img class="pyro" src="https://schale.gg/images/student/lobby/13010.webp" alt="Lobby">
+          </div>
+          <div class="popup2">
+            <h3 class="poptop">Yuuka's Recollection Lobby</h3>
+            <hr>
+            <p class="poptext">Artwork to decorate the lobby with cherished memories made with Yuuka.</p>
+          </div>
+          <a href="https://www.youtube.com/embed/CRIB3idHpwE">
+            <div class="stripbox2">
+              <h1 class="strip2">Begin Relationship Story</h1>
+            </div>
+          </a>
+      </div>
+      <br>
+      <br>
+      <br>
+      <b>blue archive relationship story recreation</b>
+      <br>feel free to edit in the <a href="https://sentrytwo.com/paste/builder?edit=rsz0tk6">builder</a>
+    </center>
+    
+    <style>
+      @import url(https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700&display=swap);
 
-<!-- saved from url=(0046)file:///C:/Users/Guest-user/Desktop/index.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252"><script charset="utf-8" src="chrome-extension://donbcfbmhbcapadipfkeojnmajbakjdc/dist/ruffle.js?id=78894102889"></script></head><body><center>
-<div class="box">
-<h3 class="top">Relationship Stories</h3>
-<div class="icon" title="icon">
-<div class="spanbox"><span>1</span></div>
-</div>
-<h4 class="name">Hayase Yuuka</h4><h4 class="subname">Responsible Spending </h4><hr><hr>
-<div class="stripbox">
+      .box {
+        letter-spacing: -.5px;
+        width: 30em;
+        height: 31em;
+        background: #fff;
+        border-radius: 15px;
+        outline: 1px solid #e0e2e4;
+        color: #000;
+        overflow: visible
+      }
 
-<h3 class="strip">Relationship Story Reward</h3></div>
+      a {text-decoration: none}
+      hr {border: none;margin-bottom: 0}
 
-<div class="pyrocont">
-<div class="pyrotext">x20</div>
-<img class="pyro" src="./index_files/Currency_Icon_Gem.png" alt="Pyroxene">
-</div>
-<div class="popup1">
-<h3 class="poptop">Pyroxene</h3><hr>
-<p class="poptext">These mystical gems can be purchased with Sensei's credit card. Trade them for various products. </p></div>
+      .icon span {
+        font-family: Noto Sans;
+        font-size: 22px;
+        font-weight: 800;
+        text-align: center;
+        position: relative;
+        top: 6px;
+        color: #3f464b;
+        text-shadow: var(--shadow)
+      }
 
+      .spanbox {
+        float: right;
+        transform: translateY(85px) translateX(85px);
+        background: url(https://raw.githubusercontent.com/pkpc9/fs/main/heartline3.svg) 0 52% no-repeat;
+        position: absolute;
+        width: 49px;
+        height: 49px
+      }
 
-<div class="pyrocont">
-<div class="pyrotext">x1</div>
-<img class="pyro" src="./index_files/13010.webp" alt="Lobby">
-</div>
-<div class="popup2">
-<h3 class="poptop">Yuuka's Recollection Lobby</h3><hr>
-<p class="poptext">Artwork to decorate the lobby with cherished memories made with Yuuka. </p></div>
+      .box .top {
+        font-family: "Noto Sans";
+        text-align: left;
+        font-size: 22px;
+        width: 91.8%;
+        color: #3f464b;
+        font-weight: 400;
+        padding: 20px;
+        padding-top: 10px;
+        background: url(https://raw.githubusercontent.com/pkpc9/fs/main/x.svg) 98% no-repeat;
+        background-size: 35px;
+        padding-bottom: 12px;
+        border-bottom: 1px solid #e0e2e4
+      }
 
+      .icon {
+        width: 130px;
+        height: 130px;
+        background: url(https://schale.gg/images/student/collection/13010.webp) center center no-repeat;
+        background-size: 110%;
+        border-radius: 100%
+      }
 
-<a href="https://www.youtube.com/embed/CRIB3idHpwE">
-<div class="stripbox2">
-<h1 class="strip2">Begin Relationship Story</h1></div></a>
+      .box .name {
+        font-family: "Noto Sans";
+        font-size: 20px;
+        padding: 13px;
+        margin: -10px;
+        color: #3f464b;
+        font-weight: 800
+      }
 
-</div>
-</center>
+      .box .subname {
+        font-family: "Noto Sans";
+        font-weight: 800;
+        font-size: 25px;
+        margin: -20px;
+        margin-bottom: -25px;
+        color: #2c4c71
+      }
 
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700&display=swap');
+      .subname::before {
+        font-family: "Noto Sans";
+        content: "ep 01";
+        font-size: 17px;
+        position: relative;
+        bottom: 2px;
+        margin-right: 6px;
+        background: #2c4c71;
+        color: #fff;
+        padding: 2px 5px;
+        font-weight: 800;
+        border-radius: 5px;
+        text-transform: uppercase;
+        vertical-align: baseline
+      }
 
-.box{
-letter-spacing: -.5px;
-width: 30em;
-height: 31em;
-background: white;
-border-radius: 15px;
-outline: 1px solid rgb(224, 226, 228);
-color: black;
-overflow: visible;
-}
+      .box .stripbox {
+        position: relative;
+        background: #2c4c71 url(https://proxy.everskies.com/a/https://iili.io/JfyLlQ2.png) center center no-repeat;
+        background-size: 110%;
+        image-rendering: pixelated;
+        transform: skew(-15deg);
+        margin: 15px 1em 22px 1em;
+        padding: 0;
+        border-radius: 5px;
+        overflow: hidden;
+        height: 37px
+      }
 
-a{text-decoration: none;}
-hr{border: none; margin-bottom: 0px;}
+      .box .strip {
+        font-family: "Noto Sans";
+        position: relative;
+        transform: skew(15deg);
+        color: #fff;
+        font-size: 22px;
+        padding: 0;
+        margin: 2px;
+        font-weight: 300;
+        -webkit-text-stroke: .2px #fff;
+        letter-spacing: .5px;
+        border-radius: 5px;
+        overflow: hidden
+      }
 
-.icon span{
-font-family: Noto Sans;
-font-size: 22px;
-font-weight: 800;
-text-align: center;
-position: relative;
-top: 6px;
-color: #3f464b;
-text-shadow: var(--shadow);
-/* I copied this text shadow code from the Cookie Run Wiki. Sorry. */
-}
+      .box .pyro {
+        width: 80px;
+        margin-top: 8px;
+        padding: 0;
+        transform: scale(.97);
+        object-fit: cover
+      }
 
-.spanbox{
-float: right;
-transform: translateY(85px) translateX(85px);
-background: url(https://raw.githubusercontent.com/pkpc9/fs/main/heartline3.svg) 0% 52% no-repeat;
-position: absolute;
-width: 49px;
- height: 49px;
-}
+      .box .pyrocont {
+        position: relative;
+        display: inline-block;
+        width: 80px;
+        height: 80px;
+        margin: -10px 0;
+        background: url(https://proxy.everskies.com/a/https://blue-utils.me/img/common/icon/bg_1.png) center center no-repeat;
+        background-size: contain;
+        filter: drop-shadow(0 2px #3f464b)
+      }
 
-.box .top{
-font-family: "Noto Sans";
-text-align: left;
-font-size: 22px;
-width: 91.8%;
-color: #3f464b;
-font-weight: 400;
-padding: 20px;
-padding-top: 10px;
-background:url(https://raw.githubusercontent.com/pkpc9/fs/main/x.svg) 98% no-repeat;
-background-size: 35px;
-padding-bottom: 12px;
-border-bottom: 1px solid rgb(224, 226, 228);
-}
+      .pyrotext {
+        z-index: 27;
+        width: 50%;
+        display: block;
+        font-family: Noto Sans;
+        font-weight: 800;
+        font-size: 17px;
+        text-align: right;
+        font-style: italic;
+        position: absolute;
+        color: #3f464b;
+        transform: translateX(25px) translateY(46px);
+        text-shadow: var(--shadow)
+      }
 
-.icon{
-width: 130px;
-height: 130px;
-background: url(https://schale.gg/images/student/collection/13010.webp) center center no-repeat;
-background-size: 110%;
-border-radius: 100%;
-}
+      .box .strip2 {
+        font-family: "Noto Sans";
+        transform: skew(15deg);
+        position: relative;
+        color: #334b65;
+        font-size: 25px;
+        margin: 10px;
+        width: 370px;
+        font-weight: 800;
+        line-height: 28px;
+        -webkit-text-stroke: .05px #334b65;
+        letter-spacing: -.5px
+      }
 
-.box .name{
-font-family: "Noto Sans";
-font-size: 20px;
-padding: 13px;
-margin: -10px;
-color: #3f464b;
-font-weight: 800}
+      .box .stripbox2 {
+        position: relative;
+        background: #75dffe;
+        background-image: url(https://moetalk.gitee.io/Images/Ui/Popup_Img_Deco_1.webp) no-repeat;
+        background-image: url(https://moetalk.gitee.io/Images/Ui/Popup_Img_Deco_0.webp), url(https://moetalk.gitee.io/Images/Ui/Popup_Img_Deco_1.webp);
+        background-position: left, bottom right;
+        background-repeat: no-repeat;
+        transform: skew(-15deg);
+        background-size: contain;
+        margin: 20px 1em 22px 1em;
+        border-radius: 8px;
+        overflow: hidden
+      }
 
-.box .subname{
-font-family: "Noto Sans";
-font-weight: 800;
-font-size: 25px;
-margin: -20px;
-margin-bottom: -25px;
-color: #2c4c71;
-}
+      .popup1 {
+        position: absolute;
+        z-index: 5;
+        top: 157px;
+        left: 35px;
+        width: 350px;
+        height: 200px;
+        visibility: hidden;
+        transform: scale(.6);
+        background: #fff;
+        border-radius: 10px;
+        border: 5px solid #2ee3f8;
+        filter: drop-shadow(5px -1px 5px #0fa2be66) drop-shadow(-5px -1px 3px #0fa2be66)
+      }
 
-.subname::before{
-font-family: "Noto Sans";
-content: "ep 01";
-font-size: 17px;
-position: relative;
-bottom: 2px;
-margin-right: 6px;
-background: #2c4c71;
-color: white;
-padding: 2px 5px;
-font-weight: 800;
-border-radius: 5px;
-text-transform: uppercase;
-vertical-align: baseline;
-}
+      .popup2 {
+        position: absolute;
+        z-index: 5;
+        top: 157px;
+        left: 120px;
+        width: 350px;
+        height: 200px;
+        visibility: hidden;
+        transform: scale(.6);
+        background: #fff;
+        border-radius: 10px;
+        border: 5px solid #2ee3f8;
+        filter: drop-shadow(5px -1px 5px #0fa2be66) drop-shadow(-5px -1px 3px #0fa2be66)
+      }
 
-.box .stripbox{
-position: relative;
-background: #2c4c71 url(https://proxy.everskies.com/a/https://iili.io/JfyLlQ2.png) center center no-repeat;
-background-size: 110%;
-image-rendering: pixelated;
-transform: skew(-15deg);
-margin: 15px 1em 22px 1em;
-padding: 0;
-border-radius: 5px;
-overflow: hidden;
-height: 37px;
-}
+      hr:nth-of-type(3) {
+        border-top: 3px dashed #d3d3d3;
+        border-bottom: one;
+        margin: 5px 16px;
+        margin-top: -20px
+      }
 
-.box .strip{
-font-family: "Noto Sans";
-position: relative;
-transform: skew(15deg);
-color: white;
-font-size: 22px;
-padding: 0px;
-margin: 2px;
-font-weight: 300;
--webkit-text-stroke: .2px white;
-letter-spacing: .5px;
-border-radius: 5px;
-overflow: hidden;
-}
+      .poptop {
+        font-family: "Noto Sans";
+        text-align: left;
+        font-size: 30px;
+        line-height: 30px;
+        color: #2c4c71;
+        font-weight: 900;
+        padding-left: 10px;
+        margin-top: 20px;
+        margin-bottom: 10px;
+        margin-left: 20px;
+        border-left: 6px solid #2ee3f8
+      }
 
+      .poptext {
+        font-family: "Noto Sans";
+        text-align: left;
+        font-size: 24px;
+        margin-top: 0;
+        line-height: 30px;
+        color: #888;
+        font-weight: 400;
+        margin-left: 20px
+      }
 
-.box .pyro{
-width: 80px;
-margin-top: 8px;
-padding: 0px;
-transform: scale(.97);
-object-fit: cover;
-}
+      .popup1::after,
+      .popup2::after {
+        overflow: visible;
+        content: "\A";
+        position: absolute;
+        bottom: -19px;
+        left: 150px;
+        width: 0;
+        height: 0;
+        border-left: 15px solid transparent;
+        border-right: 15px solid transparent;
+        border-top: 20px solid #2ee3f8
+      }
 
-.box .pyrocont{
-position: relative;
-display: inline-block;
-width: 80px;
-height: 80px;
-margin: -10px 0;
-background: url(https://proxy.everskies.com/a/https://blue-utils.me/img/common/icon/bg_1.png) center center no-repeat;
-background-size: contain;
-filter: drop-shadow(0px 2px #3f464b);
-}
+      .pyrocont:hover+.popup1 {
+        visibility: visible
+      }
 
-.pyrotext{
-z-index: 27;
-width: 50%;
-display: block;
-font-family: Noto Sans;
-font-weight: 800;
-font-size: 17px;
-text-align: right;
-font-style: italic;
-position: absolute;
-color: #3f464b;
-transform: translateX(25px)
-translateY(46px);
-text-shadow: var(--shadow);
-}
+      .pyrocont:hover+.popup2 {
+        visibility: visible
+      }
 
-.box .strip2{
-font-family: "Noto Sans";
-transform: skew(15deg);
-position: relative;
-color: #334b65;
-font-size: 25px;
-margin: 10px;
-width: 370px;
-font-weight: 800;
-line-height: 28px;
--webkit-text-stroke: .05px #334b65;
-letter-spacing: -.5px;
-}
-
-
-
-.box .stripbox2{
-position: relative;
-background: #75dffe;
-background-image: url(https://moetalk.gitee.io/Images/Ui/Popup_Img_Deco_1.webp) no-repeat;
-
-background-image: 
-url(https://moetalk.gitee.io/Images/Ui/Popup_Img_Deco_0.webp), url(https://moetalk.gitee.io/Images/Ui/Popup_Img_Deco_1.webp);
-  background-position:
-left, bottom right;
-background-repeat: no-repeat;
-transform: skew(-15deg);
-background-size: contain;
-margin: 20px 1em 22px 1em;
-border-radius: 8px;
-overflow: hidden;
-}
-
-.popup1 {
-position: absolute;
-z-index: 5;
-top: 157px;
-left: 35px;
-width: 350px;
-height: 200px;
-visibility:hidden;
-transform: scale(.6);
-background: white;
-border-radius: 10px;
-border: 5px solid #2ee3f8;
-filter: drop-shadow(5px -1px 5px #0fa2be66) drop-shadow(-5px -1px 3px #0fa2be66);
-}
-
-.popup2 {
-position: absolute;
-z-index: 5;
-top: 157px;
-left: 120px;
-width: 350px;
-height: 200px;
-visibility:hidden;
-transform: scale(.6);
-background: white;
-border-radius: 10px;
-border: 5px solid #2ee3f8;
-filter: drop-shadow(5px -1px 5px #0fa2be66) drop-shadow(-5px -1px 3px #0fa2be66);
-}
-
-hr:nth-of-type(3){
-border-top: 3px dashed lightgray;
-border-bottom: one;
-margin: 5px 16px;
-margin-top: -20px;
-}
-
-
-.poptop {
-font-family: "Noto Sans";
-text-align: left;
-font-size: 30px;
-line-height: 30px;
-color: #2c4c71;
-font-weight: 900;
-padding-left: 10px;
-margin-top: 20px;
-margin-bottom: 10px;
-margin-left: 20px;
-border-left: 6px solid #2ee3f8;
-}
-
-
-
-.poptext {
-font-family: "Noto Sans";
-text-align: left;
-font-size: 24px;
-margin-top: 0;
-line-height: 30px;
-color: #888;
-font-weight: 400;
-margin-left: 20px;
-}
-
-.popup1::after, .popup2::after {overflow: visible;
-content: "\A";
-position: absolute;
-bottom: -19px;
-left: 150px;
-    width: 0px;
-    height: 0px;
-    border-left: 15px solid transparent;
-    border-right: 15px solid transparent;
-    border-top: 20px solid #2ee3f8;
-}
-
-
-.pyrocont:hover + .popup1 {
-visibility: visible;
-}
-.pyrocont:hover + .popup2 {
-visibility: visible;
-}
-
-
-
-
-:root{
---shadow:1px 1px 0 white,-1px 1px 0 white,1px -1px 0 white,-1px -1px 0 white,0px 1px 0 white,0px -1px 0 white,-1px 0px 0 white,1px 0px 0 white,1px 1px 0 white,-1px 1px 0 white,1px -1px 0 white,-1px -1px 0 white,0px 1px 0 white,0px -1px 0 white,-1px 0px 0 white,1px 0px 0 white,1px 1px 0 white,-1px 1px 0 white,1px -1px 0 white,-1px -1px 0 white,1px 1px 0 white,-1px 1px 0 white,1px -1px 0 white,-1px -1px 0 white;
-
-}
-
-</style></body></html>
+      :root {
+        --shadow: 1px 1px 0 white, -1px 1px 0 white, 1px -1px 0 white, -1px -1px 0 white, 0px 1px 0 white, 0px -1px 0 white, -1px 0px 0 white, 1px 0px 0 white, 1px 1px 0 white, -1px 1px 0 white, 1px -1px 0 white, -1px -1px 0 white, 0px 1px 0 white, 0px -1px 0 white, -1px 0px 0 white, 1px 0px 0 white, 1px 1px 0 white, -1px 1px 0 white, 1px -1px 0 white, -1px -1px 0 white, 1px 1px 0 white, -1px 1px 0 white, 1px -1px 0 white, -1px -1px 0 white
+      }
+    </style>
+  </body>
+</html>
