--- a/index.html
+++ b/index.html
@@ -38,17 +38,12 @@
             <hr>
             <p class="poptext">Artwork to decorate the lobby with cherished memories made with Yuuka.</p>
           </div>
-          <a href="https://www.youtube.com/embed/CRIB3idHpwE">
+          <a href="https://www.youtube.com/embed/t9fhFLWshkQ?si=13gS-6vuWGbJqM9E&amp;start=57&autoplay=1">
             <div class="stripbox2">
               <h1 class="strip2">Begin Relationship Story</h1>
             </div>
           </a>
       </div>
-      <br>
-      <br>
-      <br>
-      <b>blue archive relationship story recreation</b>
-      <br>feel free to edit in the <a href="https://sentrytwo.com/paste/builder?edit=rsz0tk6">builder</a>
     </center>
     
     <style>
@@ -239,7 +234,7 @@
         position: absolute;
         z-index: 5;
         top: 157px;
-        left: 35px;
+margin-left: 26px;
         width: 350px;
         height: 200px;
         visibility: hidden;
@@ -254,7 +249,7 @@
         position: absolute;
         z-index: 5;
         top: 157px;
-        left: 120px;
+margin-left: 109px;
         width: 350px;
         height: 200px;
         visibility: hidden;
