add contenteditable to text, update embed link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <center>
-      <div class="box">
+      <div class="box" spellcheck="false">
         <h3 class="top">Relationship Stories</h3>
         <center>
           <div class="icon" title="icon">
@@ -13,15 +13,15 @@
               <span>1</span>
             </div>
           </div>
-          <h4 class="name">Hayase Yuuka</h4>
-          <h4 class="subname">Responsible Spending</h4>
+          <h4 class="name" contenteditable="true">Hayase Yuuka</h4>
+          <h4 class="subname" contenteditable="true">Responsible Spending</h4>
           <hr>
           <hr>
           <div class="stripbox">
             <h3 class="strip">Relationship Story Reward</h3>
           </div>
           <div class="pyrocont">
-            <div class="pyrotext">x20</div>
+            <div class="pyrotext" contenteditable="true">x20</div>
             <img class="pyro" src="https://static.miraheze.org/bluearchivewiki/3/3b/Currency_Icon_Gem.png" alt="Pyroxene">
           </div>
           <div class="popup1">
@@ -30,7 +30,7 @@
             <p class="poptext">These mystical gems can be purchased with Sensei's credit card. Trade them for various products.</p>
           </div>
           <div class="pyrocont">
-            <div class="pyrotext">x1</div>
+            <div class="pyrotext" contenteditable="true">x1</div>
             <img class="pyro" src="https://schale.gg/images/student/lobby/13010.webp" alt="Lobby">
           </div>
           <div class="popup2">
@@ -38,7 +38,7 @@
             <hr>
             <p class="poptext">Artwork to decorate the lobby with cherished memories made with Yuuka.</p>
           </div>
-          <a href="https://www.youtube.com/embed/t9fhFLWshkQ?si=13gS-6vuWGbJqM9E&amp;start=57&autoplay=1">
+          <a href="https://www.youtube.com/embed/t9fhFLWshkQ?start=57&autoplay=1">
             <div class="stripbox2">
               <h1 class="strip2">Begin Relationship Story</h1>
             </div>
