--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Relationship Stories</title>
+    <link rel="icon" href="https://iili.io/Jqkrg3u.png" type="image/x-icon" />
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
   </head>
   <body>
