--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         font-style: italic;
         position: absolute;
         color: #3f464b;
-        transform: translateX(25px) translateY(46px);
+        transform: translateY(46px);
         text-shadow: var(--shadow)
       }
 
