--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h3 class="top">Relationship Stories</h3>
         <center>
           <div class="icon" title="icon">
-            <div class="spanbox">
+            <div class="spanbox" contenteditable="true">
               <span>1</span>
             </div>
           </div>
@@ -70,7 +70,7 @@
         font-weight: 800;
         text-align: center;
         position: relative;
-        top: 6px;
+        top: 7px;
         color: #3f464b;
         text-shadow: var(--shadow)
       }
