--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <h3 class="top">Relationship Stories</h3>
         <center>
           <div class="icon" title="icon">
-            <div class="spanbox" contenteditable="true">
-              <span>1</span>
+            <div class="spanbox">
+              <span contenteditable="true">1</span>
             </div>
           </div>
           <h4 class="name" contenteditable="true">Hayase Yuuka</h4>
@@ -143,7 +143,7 @@
 
       .box .stripbox {
         position: relative;
-        background: #2c4c71 url(https://proxy.everskies.com/a/https://iili.io/JfyLlQ2.png) center center no-repeat;
+        background: #2c4c71 url(https://iili.io/JfyLlQ2.png) center center no-repeat;
         background-size: 110%;
         image-rendering: pixelated;
         transform: skew(-15deg);
@@ -183,7 +183,7 @@
         width: 80px;
         height: 80px;
         margin: -10px 0;
-        background: url(https://proxy.everskies.com/a/https://blue-utils.me/img/common/icon/bg_1.png) center center no-repeat;
+        background: url(https://blue-utils.me/img/common/icon/bg_1.png) center center no-repeat;
         background-size: contain;
         filter: drop-shadow(0 2px #3f464b)
       }
