--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <html>
   <head>
     <title>Relationship Stories</title>
-    <link rel="icon" href="https://iili.io/Jqkrg3u.png" type="image/x-icon" />
+    <link rel="icon" href="https://iili.io/Jqkrg3u.png" type="image/x-icon">
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-  </head>
   <body>
     <center>
       <div class="box" spellcheck="false">
         <h3 class="top">Relationship Stories</h3>
         <center>
           <div class="icon" title="icon">
-            <div class="spanbox">
+            <div class="spanbox" >
               <span contenteditable="true">1</span>
             </div>
           </div>
           <h4 class="name" contenteditable="true">Hayase Yuuka</h4>
-          <h4 class="subname" contenteditable="true">Responsible Spending</h4>
+          <h4 class="subname" contenteditable="true"><span>EP 01</span>Responsible Spending</h4>
           <hr>
           <hr>
           <div class="stripbox">
-            <h3 class="strip">Relationship Story Reward</h3>
+            <h3 class="strip" contenteditable="true">Relationship Story Reward</h3>
           </div>
           <div class="pyrocont">
             <div class="pyrotext" contenteditable="true">x20</div>
@@ -39,12 +38,10 @@
             <hr>
             <p class="poptext">Artwork to decorate the lobby with cherished memories made with Yuuka.</p>
           </div>
-          <a href="https://www.youtube.com/embed/t9fhFLWshkQ?start=57&autoplay=1">
             <div class="stripbox2">
-              <h1 class="strip2">Begin Relationship Story</h1>
+              <h1 class="strip2" contenteditable="true">Begin Relationship Story</h1>
             </div>
-          </a>
-      </div>
+      </center></div>
     </center>
     
     <style>
@@ -125,11 +122,11 @@
         color: #2c4c71
       }
 
-      .subname::before {
+      .subname span {
         font-family: "Noto Sans";
-        content: "ep 01";
         font-size: 17px;
         position: relative;
+        display: inline-block;
         bottom: 2px;
         margin-right: 6px;
         background: #2c4c71;
@@ -143,7 +140,7 @@
 
       .box .stripbox {
         position: relative;
-        background: #2c4c71 url(https://iili.io/JfyLlQ2.png) center center no-repeat;
+        background: #2c4c71 url(https://proxy.everskies.com/a/https://iili.io/JfyLlQ2.png) center center no-repeat;
         background-size: 110%;
         image-rendering: pixelated;
         transform: skew(-15deg);
@@ -155,6 +152,7 @@
       }
 
       .box .strip {
+      text-transform: capitalize;
         font-family: "Noto Sans";
         position: relative;
         transform: skew(15deg);
@@ -183,7 +181,7 @@
         width: 80px;
         height: 80px;
         margin: -10px 0;
-        background: url(https://blue-utils.me/img/common/icon/bg_1.png) center center no-repeat;
+        background: url(https://proxy.everskies.com/a/https://blue-utils.me/img/common/icon/bg_1.png) center center no-repeat;
         background-size: contain;
         filter: drop-shadow(0 2px #3f464b)
       }
@@ -319,5 +317,6 @@ margin-left: 109px;
         --shadow: 1px 1px 0 white, -1px 1px 0 white, 1px -1px 0 white, -1px -1px 0 white, 0px 1px 0 white, 0px -1px 0 white, -1px 0px 0 white, 1px 0px 0 white, 1px 1px 0 white, -1px 1px 0 white, 1px -1px 0 white, -1px -1px 0 white, 0px 1px 0 white, 0px -1px 0 white, -1px 0px 0 white, 1px 0px 0 white, 1px 1px 0 white, -1px 1px 0 white, 1px -1px 0 white, -1px -1px 0 white, 1px 1px 0 white, -1px 1px 0 white, 1px -1px 0 white, -1px -1px 0 white
       }
     </style>
-  </body>
+    
+</body>
 </html>
