--- a/jp.html
+++ b/jp.html
@@ -29,7 +29,7 @@
 				<hr>
 				<hr>
 				<div class="stripbox">
-					<h3 class="strip" contenteditable="true">絆ストーリーの報</h3>
+					<h3 class="strip" contenteditable="true">絆ストーリーの報酬</h3>
 				</div>
 				<div class="pyrocont">
 					<div class="pyrotext" contenteditable="true">x20</div>
