--- a/jp.html
+++ b/jp.html
@@ -44,7 +44,7 @@
       </div>
       <style>
         @font-face {
-          font-family: "shinmaru";
+          font-family: "A-OTF Shin Maru Go Pro M";
           src: url("https://files.catbox.moe/rounzz.otf") format("opentype")
         }
 
@@ -69,7 +69,7 @@
         }
 
         .icon span {
-          font-family: "shinmaru";
+          font-family: "A-OTF Shin Maru Go Pro M";
           font-size: 22px;
           font-weight: 800;
           text-align: center;
@@ -87,7 +87,7 @@
           transform: translateX(5px);
           color: black;
           font-weight: 400;
-          font-family: "shinmaru";
+          font-family: "A-OTF Shin Maru Go Pro M";
         }
 
         .icon:hover #change-image-button {
@@ -110,7 +110,7 @@
         }
 
         .box .top {
-          font-family: "shinmaru";
+          font-family: "A-OTF Shin Maru Go Pro M";
           text-align: left;
           font-size: 22px;
           width: 91.8%;
@@ -142,7 +142,7 @@
         }
 
         .box .name {
-          font-family: "shinmaru";
+          font-family: "A-OTF Shin Maru Go Pro M";
           font-size: 30px;
           font-weight: 500;
           margin: -20px;
@@ -151,7 +151,7 @@
         }
 
         .box .subname {
-          font-family: "shinmaru";
+          font-family: "A-OTF Shin Maru Go Pro M";
           font-size: 30px;
           margin: -35px;
           margin-bottom: -25px;
@@ -160,7 +160,7 @@
         }
 
         .subname span {
-          font-family: "shinmaru";
+          font-family: "A-OTF Shin Maru Go Pro M";
           font-size: 18px;
           font-weight: 300;
           position: relative;
@@ -190,7 +190,7 @@
 
         .box .strip {
           text-transform: capitalize;
-          font-family: "shinmaru";
+          font-family: "A-OTF Shin Maru Go Pro M";
           position: relative;
           transform: skew(15deg) translateY(-10px);
           color: #fff;
@@ -226,7 +226,7 @@
           z-index: 27;
           width: 80%;
           display: block;
-          font-family: "shinmaru";
+          font-family: "A-OTF Shin Maru Go Pro M";
           font-weight: 800;
           font-size: 17px;
           text-align: right;
@@ -238,7 +238,7 @@
         }
 
         .box .strip2 {
-          font-family: "shinmaru";
+          font-family: "A-OTF Shin Maru Go Pro M";
           transform: skew(15deg);
           position: relative;
           color: #334b65;
@@ -303,7 +303,7 @@
         }
 
         .poptop {
-          font-family: "shinmaru";
+          font-family: "A-OTF Shin Maru Go Pro M";
           text-align: left;
           font-size: 30px;
           line-height: 30px;
@@ -317,7 +317,7 @@
         }
 
         .poptext {
-          font-family: "shinmaru";
+          font-family: "A-OTF Shin Maru Go Pro M";
           text-align: left;
           font-size: 24px;
           margin-top: 0;
