--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
 	<title>Relationship Stories</title>
 	<link rel="icon" href="https://iili.io/Jqkrg3u.png" type="image/x-icon">
@@ -8,12 +9,13 @@
 <body>
 	<center>
 		<div class="box" spellcheck="false">
-      <div class="header">
-			<h3 class="top">Relationship Stories</h3>
-<a href="https://pkpc99.github.io"> <svg width="40" height="40">
-	<image xlink:href="https://raw.githubusercontent.com/pkpc99/fs/main/x.svg" src="https://iili.io/JuQ3nrG.png" width="40" height="40" />
-</svg></a>
-      </div>
+			<div class="header">
+				<h3 class="top">Relationship Stories</h3>
+				<a href="https://pkpc99.github.io"> <svg width="40" height="40">
+						<image xlink:href="https://raw.githubusercontent.com/pkpc99/fs/main/x.svg"
+							src="https://iili.io/JuQ3nrG.png" width="40" height="40" />
+					</svg></a>
+			</div>
 			<center>
 
 				<div class="icon">
@@ -140,14 +142,15 @@
 		border-bottom: 1px solid #e0e2e4
 	}
 
-.header{
-  position: relative;
-}
-  .header svg{
-   position: absolute;
-   top:6px;
-   right: 10px; 
-  }
+	.header {
+		position: relative;
+	}
+
+	.header svg {
+		position: absolute;
+		top: 6px;
+		right: 10px;
+	}
 
 	.icon {
 		width: 130px;
