--- a/jp.html
+++ b/jp.html
@@ -9,7 +9,13 @@
   <body>
     <center>
       <div class="box" spellcheck="false">
+        <div class="header">
         <h3 class="top">絆ストーリー</h3>
+          <a href="https://pkpc99.github.io"> <svg width="40" height="40">
+						<image xlink:href="https://raw.githubusercontent.com/pkpc99/fs/main/x.svg"
+							src="https://iili.io/JuQ3nrG.png" width="40" height="40" />
+					</svg></a>
+			    </div>
         <center>
           <div class="icon">
             <img class="iconimg" src="https://schale.gg/images/student/collection/13010.webp" oncontextmenu="return false;">
@@ -123,6 +129,15 @@
           padding-bottom: 12px;
           border-bottom: 1px solid #e0e2e4
         }
+        .header {
+		    position: relative;
+	      }
+
+	      .header svg {
+		    position: absolute;
+		    top: 6px;
+		    right: 10px;
+	      }
 
         .icon {
           width: 130px;
