--- a/index.html
+++ b/index.html
@@ -1,390 +1,405 @@
 <html>
-
-<head>
-	<title>Relationship Stories</title>
-	<link rel="icon" href="https://iili.io/Jqkrg3u.png" type="image/x-icon">
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<body>
-	<center>
-		<div class="box" spellcheck="false">
-			<div class="header">
-				<h3 class="top">Relationship Stories</h3>
-				<a href="https://pkpc99.github.io"> <svg width="40" height="40">
-						<image xlink:href="https://raw.githubusercontent.com/pkpc99/fs/main/x.svg"
-							src="https://iili.io/JuQ3nrG.png" width="40" height="40" />
-					</svg></a>
-			</div>
-			<center>
-
-				<div class="icon">
-					<img class="iconimg" src="https://schale.gg/images/student/collection/13010.webp" oncontextmenu='return false;'></img>
-					<a href="#" id="change-image-button">Change image</a>
-					<div class="spanbox">
-						<span contenteditable="true">1</span>
-					</div>
-				</div>
-
-				<h4 class="name" contenteditable="true">Hayase Yuuka</h4>
-				<h4 class="subname" contenteditable="true">
-					<span>EP 01</span>Responsible Spending
-				</h4>
-				<hr>
-				<hr>
-				<div class="stripbox">
-					<h3 class="strip" contenteditable="true">Relationship Story Reward</h3>
-				</div>
-				<div class="pyrocont">
-					<div class="pyrotext" contenteditable="true">x20</div>
-					<img class="pyro" src="https://static.miraheze.org/bluearchivewiki/3/3b/Currency_Icon_Gem.png" alt="Pyroxene">
+  <head>
+    <title>Relationship Stories</title>
+    <link rel="icon" href="https://iili.io/Jqkrg3u.png" type="image/x-icon">
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <body>
+    <center>
+      <div class="box" spellcheck="false">
+        <div class="header">
+          <h3 class="top">Relationship Stories</h3>
+          <a href="https://pkpc99.github.io">
+            <svg width="40" height="40">
+              <image xlink:href="https://raw.githubusercontent.com/pkpc99/fs/main/x.svg" src="https://iili.io/JuQ3nrG.png" width="40" height="40" />
+            </svg>
+          </a>
+        </div>
+        <center>
+          <div class="icon">
+            <img class="iconimg" src="https://schale.gg/images/student/collection/13010.webp" oncontextmenu='return false;'></img>
+            <a href="#" id="change-image-button">Change image</a>
+            <div class="spanbox">
+              <span contenteditable="true">1</span>
+            </div>
           </div>
-					<div class="popup1">
-						<h3 class="poptop">Pyroxene</h3>
-						<hr>
-						<p class="poptext">These mystical gems can be purchased with Sensei's credit card. Trade them
-							for various products.</p>
-					</div>
-					<div class="pyrocont">
-						<div class="pyrotext" contenteditable="true">x1</div>
-						<img class="pyro" src="https://schale.gg/images/student/lobby/13010.webp" alt="Lobby">
+          <h4 class="name" contenteditable="true">Hayase Yuuka</h4>
+          <h4 class="subname" contenteditable="true">
+            <span>EP 01</span>Responsible Spending
+          </h4>
+          <hr>
+          <hr>
+          <div class="stripbox">
+            <h3 class="strip" contenteditable="true">Relationship Story Reward</h3>
           </div>
-						<div class="popup2">
-							<h3 class="poptop">Yuuka's Recollection Lobby</h3>
-							<hr>
-							<p class="poptext">Artwork to decorate the lobby with cherished memories made with Yuuka.
-							</p>
-						</div>
-						<div class="stripbox2">
-							<h1 class="strip2" contenteditable="true">Begin Relationship Story</h1>
-						</div>
-			</center>
-		</div>
-</body>
-
+          <div class="pyrocont">
+            <div class="pyrotext" contenteditable="true">x20</div>
+            <img class="pyro" src="https://static.miraheze.org/bluearchivewiki/3/3b/Currency_Icon_Gem.png" alt="Pyroxene">
+          </div>
+          <div class="popup1">
+            <h3 class="poptop">Pyroxene</h3>
+            <hr>
+            <p class="poptext">These mystical gems can be purchased with Sensei's credit card. Trade them for various products.</p>
+          </div>
+          <div class="pyrocont">
+            <div class="pyrotext" contenteditable="true">x1</div>
+            <img class="pyro" src="https://schale.gg/images/student/lobby/13010.webp" alt="Lobby">
+          </div>
+          <div class="popup2">
+            <h3 class="poptop">Yuuka's Recollection Lobby</h3>
+            <hr>
+            <p class="poptext">Artwork to decorate the lobby with cherished memories made with Yuuka. </p>
+          </div>
+          <div class="stripbox2">
+            <h1 class="strip2" contenteditable="true">Begin Relationship Story</h1>
+          </div>
+        </center>
+      </div>
+	    
+<select onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
+  <option value="">pick language (will redirect)</option>
+  <option value="https://pkpc99.github.io/relationshipstory">en</option>
+  <option value="https://pkpc99.github.io/relationshipstory/jp">jp</option>
+  <option value="https://pkpc99.github.io/relationshipstory/kr">kr</option>
+</select>
+	    
+  </body>
 </html>
 
+
 <style>
-	@import url(https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700&display=swap);
-
-	.box {
-		letter-spacing: -.5px;
-		width: 30em;
-		height: 31em;
-		background: #fff;
-		border-radius: 15px;
-		outline: 1px solid #e0e2e4;
-		color: #000;
-		overflow: visible
+  @import url(https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;500;600;700&display=swap);
+	
+select{
+	font-family: Noto Sans;
+	font-size: 19px;
+	translate: 0 40px;
+	padding: 5px;
+	border: none;
+	color: #2c4c71;
+	}
+select, option{
+	outline: 0px solid transparent;
 	}
 
-	a {
-		text-decoration: none
-	}
+  .box {
+    letter-spacing: -.5px;
+    width: 30em;
+    height: 31em;
+    background: #fff;
+    border-radius: 15px;
+    outline: 1px solid #e0e2e4;
+    color: #000;
+    overflow: visible
+  }
 
-	hr {
-		border: none;
-		margin-bottom: 0
-	}
+  a {
+    text-decoration: none
+  }
 
-	.icon span {
-		font-family: Noto Sans;
-		font-size: 22px;
-		font-weight: 800;
-		text-align: center;
-		position: relative;
-		top: 7px;
-		color: #3f464b;
-		text-shadow: var(--shadow)
-	}
+  hr {
+    border: none;
+    margin-bottom: 0
+  }
 
-	#change-image-button {
-		display: none;
-		text-align: center;
-		position: absolute;
-		top: 150px;
-		transform: translateX(15px);
-		color: black;
-		font-weight: 400;
-		font-family: Noto Sans;
-	}
+  .icon span {
+    font-family: Noto Sans;
+    font-size: 22px;
+    font-weight: 800;
+    text-align: center;
+    position: relative;
+    top: 7px;
+    color: #3f464b;
+    text-shadow: var(--shadow)
+  }
 
-	.icon:hover #change-image-button {
-		display: block;
-	}
+  #change-image-button {
+    display: none;
+    text-align: center;
+    position: absolute;
+    top: 150px;
+    transform: translateX(15px);
+    color: black;
+    font-weight: 400;
+    font-family: Noto Sans;
+  }
 
-	.icon:hover .iconimg {
-		opacity: .3;
-		filter: blur(1px);
-	}
+  .icon:hover #change-image-button {
+    display: block;
+  }
 
-	.spanbox {
-		float: right;
-		transform: translateY(-49px) translateX(85px);
-		background: url(https://raw.githubusercontent.com/pkpc99/fs/main/heartline3.svg) 0 52% no-repeat;
-		position: absolute;
-		width: 49px;
-		height: 49px;
-		cursor: text;
-	}
+  .icon:hover .iconimg {
+    opacity: .3;
+    filter: blur(1px);
+  }
 
-	.box .top {
-		font-family: "Noto Sans";
-		text-align: left;
-		font-size: 22px;
-		width: 91.8%;
-		color: #3f464b;
-		font-weight: 400;
-		padding: 20px;
-		padding-top: 10px;
-		background-size: 35px;
-		padding-bottom: 12px;
-		border-bottom: 1px solid #e0e2e4
-	}
+  .spanbox {
+    float: right;
+    transform: translateY(-49px) translateX(85px);
+    background: url(https://raw.githubusercontent.com/pkpc99/fs/main/heartline3.svg) 0 52% no-repeat;
+    position: absolute;
+    width: 49px;
+    height: 49px;
+    cursor: text;
+  }
 
-	.header {
-		position: relative;
-	}
+  .box .top {
+    font-family: "Noto Sans";
+    text-align: left;
+    font-size: 22px;
+    width: 91.8%;
+    color: #3f464b;
+    font-weight: 400;
+    padding: 20px;
+    padding-top: 10px;
+    background-size: 35px;
+    padding-bottom: 12px;
+    border-bottom: 1px solid #e0e2e4
+  }
 
-	.header svg {
-		position: absolute;
-		top: 6px;
-		right: 10px;
-	}
+  .header {
+    position: relative;
+  }
 
-	.icon {
-		width: 130px;
-		height: 130px;
-		overflow: hidden;
-		border-radius: 100%;
-		background-color: #ddd;
-	}
+  .header svg {
+    position: absolute;
+    top: 6px;
+    right: 10px;
+  }
 
-	.iconimg {
-		object-fit: cover;
-		pointer-events: none;
-		width: 100%;
-		height: 100%;
-		transform: scale(1.13);
-		border-radius: 100%
-	}
+  .icon {
+    width: 130px;
+    height: 130px;
+    overflow: hidden;
+    border-radius: 100%;
+    background-color: #ddd;
+  }
 
-	.box .name {
-		font-family: "Noto Sans";
-		font-size: 20px;
-		padding: 13px;
-		margin: -10px;
-		color: #3f464b;
-		font-weight: 800
-	}
+  .iconimg {
+    object-fit: cover;
+    pointer-events: none;
+    width: 100%;
+    height: 100%;
+    transform: scale(1.13);
+    border-radius: 100%
+  }
 
-	.box .subname {
-		font-family: "Noto Sans";
-		font-weight: 800;
-		font-size: 25px;
-		margin: -20px;
-		margin-bottom: -25px;
-		color: #2c4c71
-	}
+  .box .name {
+    font-family: "Noto Sans";
+    font-size: 20px;
+    padding: 13px;
+    margin: -10px;
+    color: #3f464b;
+    font-weight: 800
+  }
 
-	.subname span {
-		font-family: "Noto Sans";
-		font-size: 17px;
-		position: relative;
-		display: inline-block;
-		bottom: 2px;
-		margin-right: 6px;
-		background: #2c4c71;
-		color: #fff;
-		padding: 2px 5px;
-		font-weight: 800;
-		border-radius: 5px;
-		text-transform: uppercase;
-		vertical-align: baseline
-	}
+  .box .subname {
+    font-family: "Noto Sans";
+    font-weight: 800;
+    font-size: 25px;
+    margin: -20px;
+    margin-bottom: -25px;
+    color: #2c4c71
+  }
 
-	.box .stripbox {
-		position: relative;
-		background: #2c4c71 url(https://proxy.everskies.com/a/https://iili.io/JfyLlQ2.png) center center no-repeat;
-		background-size: 110%;
-		image-rendering: pixelated;
-		transform: skew(-15deg);
-		margin: 15px 1em 22px 1em;
-		padding: 0;
-		border-radius: 5px;
-		overflow: hidden;
-		height: 37px
-	}
+  .subname span {
+    font-family: "Noto Sans";
+    font-size: 17px;
+    position: relative;
+    display: inline-block;
+    bottom: 2px;
+    margin-right: 6px;
+    background: #2c4c71;
+    color: #fff;
+    padding: 2px 5px;
+    font-weight: 800;
+    border-radius: 5px;
+    text-transform: uppercase;
+    vertical-align: baseline
+  }
 
-	.box .strip {
-		text-transform: capitalize;
-		font-family: "Noto Sans";
-		position: relative;
-		transform: skew(15deg);
-		color: #fff;
-		font-size: 22px;
-		padding: 0;
-		margin: 2px;
-		font-weight: 300;
-		-webkit-text-stroke: .2px #fff;
-		letter-spacing: .5px;
-		border-radius: 5px;
-		overflow: hidden
-	}
+  .box .stripbox {
+    position: relative;
+    background: #2c4c71 url(https://proxy.everskies.com/a/https://iili.io/JfyLlQ2.png) center center no-repeat;
+    background-size: 110%;
+    image-rendering: pixelated;
+    transform: skew(-15deg);
+    margin: 15px 1em 22px 1em;
+    padding: 0;
+    border-radius: 5px;
+    overflow: hidden;
+    height: 37px
+  }
 
-	.box .pyro {
-		width: 80px;
-		margin-top: 8px;
-		padding: 0;
-		transform: scale(.97);
-		object-fit: cover
-	}
+  .box .strip {
+    text-transform: capitalize;
+    font-family: "Noto Sans";
+    position: relative;
+    transform: skew(15deg);
+    color: #fff;
+    font-size: 22px;
+    padding: 0;
+    margin: 2px;
+    font-weight: 300;
+    -webkit-text-stroke: .2px #fff;
+    letter-spacing: .5px;
+    border-radius: 5px;
+    overflow: hidden
+  }
 
-	.box .pyrocont {
-		position: relative;
-		display: inline-block;
-		width: 80px;
-		height: 80px;
-		margin: -10px 0;
-		background: url(https://proxy.everskies.com/a/https://blue-utils.me/img/common/icon/bg_1.png) center center no-repeat;
-		background-size: contain;
-		filter: drop-shadow(0 2px #3f464b)
-	}
+  .box .pyro {
+    width: 80px;
+    margin-top: 8px;
+    padding: 0;
+    transform: scale(.97);
+    object-fit: cover
+  }
 
-	.pyrotext {
-		z-index: 27;
-		width: 80%;
-		display: block;
-		font-family: Noto Sans;
-		font-weight: 800;
-		font-size: 17px;
-		text-align: right;
-		font-style: italic;
-		position: absolute;
-		color: #3f464b;
-		transform: translateY(46px);
-		text-shadow: var(--shadow)
-	}
+  .box .pyrocont {
+    position: relative;
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+    margin: -10px 0;
+    background: url(https://proxy.everskies.com/a/https://blue-utils.me/img/common/icon/bg_1.png) center center no-repeat;
+    background-size: contain;
+    filter: drop-shadow(0 2px #3f464b)
+  }
 
-	.box .strip2 {
-		font-family: "Noto Sans";
-		transform: skew(15deg);
-		position: relative;
-		color: #334b65;
-		font-size: 25px;
-		margin: 10px;
-		width: 370px;
-		font-weight: 800;
-		line-height: 28px;
-		letter-spacing: -.5px
-	}
+  .pyrotext {
+    z-index: 27;
+    width: 80%;
+    display: block;
+    font-family: Noto Sans;
+    font-weight: 800;
+    font-size: 17px;
+    text-align: right;
+    font-style: italic;
+    position: absolute;
+    color: #3f464b;
+    transform: translateY(46px);
+    text-shadow: var(--shadow)
+  }
 
-	.box .stripbox2 {
-		position: relative;
-		background: #75dffe;
-		background-image: url(https://moetalk.gitee.io/Images/Ui/Popup_Img_Deco_1.webp) no-repeat;
-		background-image: url(https://moetalk.gitee.io/Images/Ui/Popup_Img_Deco_0.webp), url(https://moetalk.gitee.io/Images/Ui/Popup_Img_Deco_1.webp);
-		background-position: left, bottom right;
-		background-repeat: no-repeat;
-		transform: skew(-15deg);
-		background-size: contain;
-		margin: 20px 1em 22px 1em;
-		border-radius: 8px;
-		overflow: hidden
-	}
+  .box .strip2 {
+    font-family: "Noto Sans";
+    transform: skew(15deg);
+    position: relative;
+    color: #334b65;
+    font-size: 25px;
+    margin: 10px;
+    width: 370px;
+    font-weight: 800;
+    line-height: 28px;
+    letter-spacing: -.5px
+  }
 
-	.popup1 {
-		position: absolute;
-		z-index: 5;
-		top: 157px;
-		margin-left: 26px;
-		width: 350px;
-		height: 200px;
-		visibility: hidden;
-		transform: scale(.6);
-		background: #fff;
-		border-radius: 10px;
-		border: 5px solid #2ee3f8;
-		filter: drop-shadow(5px -1px 5px #0fa2be66) drop-shadow(-5px -1px 3px #0fa2be66)
-	}
+  .box .stripbox2 {
+    position: relative;
+    background: #75dffe;
+    background-image: url(https://moetalk.gitee.io/Images/Ui/Popup_Img_Deco_1.webp) no-repeat;
+    background-image: url(https://moetalk.gitee.io/Images/Ui/Popup_Img_Deco_0.webp), url(https://moetalk.gitee.io/Images/Ui/Popup_Img_Deco_1.webp);
+    background-position: left, bottom right;
+    background-repeat: no-repeat;
+    transform: skew(-15deg);
+    background-size: contain;
+    margin: 20px 1em 22px 1em;
+    border-radius: 8px;
+    overflow: hidden
+  }
 
-	.popup2 {
-		position: absolute;
-		z-index: 5;
-		top: 157px;
-		margin-left: 109px;
-		width: 350px;
-		height: 200px;
-		visibility: hidden;
-		transform: scale(.6);
-		background: #fff;
-		border-radius: 10px;
-		border: 5px solid #2ee3f8;
-		filter: drop-shadow(5px -1px 5px #0fa2be66) drop-shadow(-5px -1px 3px #0fa2be66)
-	}
+  .popup1 {
+    position: absolute;
+    z-index: 5;
+    top: 157px;
+    margin-left: 26px;
+    width: 350px;
+    height: 200px;
+    visibility: hidden;
+    transform: scale(.6);
+    background: #fff;
+    border-radius: 10px;
+    border: 5px solid #2ee3f8;
+    filter: drop-shadow(5px -1px 5px #0fa2be66) drop-shadow(-5px -1px 3px #0fa2be66)
+  }
 
-	hr:nth-of-type(3) {
-		border-top: 3px dashed #d3d3d3;
-		border-bottom: one;
-		margin: 5px 16px;
-		margin-top: -20px
-	}
+  .popup2 {
+    position: absolute;
+    z-index: 5;
+    top: 157px;
+    margin-left: 109px;
+    width: 350px;
+    height: 200px;
+    visibility: hidden;
+    transform: scale(.6);
+    background: #fff;
+    border-radius: 10px;
+    border: 5px solid #2ee3f8;
+    filter: drop-shadow(5px -1px 5px #0fa2be66) drop-shadow(-5px -1px 3px #0fa2be66)
+  }
 
-	.poptop {
-		font-family: "Noto Sans";
-		text-align: left;
-		font-size: 30px;
-		line-height: 30px;
-		color: #2c4c71;
-		font-weight: 900;
-		padding-left: 10px;
-		margin-top: 20px;
-		margin-bottom: 10px;
-		margin-left: 20px;
-		border-left: 6px solid #2ee3f8
-	}
+  hr:nth-of-type(3) {
+    border-top: 3px dashed #d3d3d3;
+    border-bottom: one;
+    margin: 5px 16px;
+    margin-top: -20px
+  }
 
-	.poptext {
-		font-family: "Noto Sans";
-		text-align: left;
-		font-size: 24px;
-		margin-top: 0;
-		line-height: 30px;
-		color: #888;
-		font-weight: 400;
-		margin-left: 20px
-	}
+  .poptop {
+    font-family: "Noto Sans";
+    text-align: left;
+    font-size: 30px;
+    line-height: 30px;
+    color: #2c4c71;
+    font-weight: 900;
+    padding-left: 10px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    border-left: 6px solid #2ee3f8
+  }
 
-	.popup1::after,
-	.popup2::after {
-		overflow: visible;
-		content: "\A";
-		position: absolute;
-		bottom: -19px;
-		left: 150px;
-		width: 0;
-		height: 0;
-		border-left: 15px solid transparent;
-		border-right: 15px solid transparent;
-		border-top: 20px solid #2ee3f8
-	}
+  .poptext {
+    font-family: "Noto Sans";
+    text-align: left;
+    font-size: 24px;
+    margin-top: 0;
+    line-height: 30px;
+    color: #888;
+    font-weight: 400;
+    margin-left: 20px
+  }
 
-	.pyrocont:hover+.popup1 {
-		visibility: visible
-	}
+  .popup1::after,
+  .popup2::after {
+    overflow: visible;
+    content: "\A";
+    position: absolute;
+    bottom: -19px;
+    left: 150px;
+    width: 0;
+    height: 0;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-top: 20px solid #2ee3f8
+  }
 
-	.pyrocont:hover+.popup2 {
-		visibility: visible
-	}
+  .pyrocont:hover+.popup1 {
+    visibility: visible
+  }
 
-	:root {
-		--shadow: 1px 1px 0 white, -1px 1px 0 white, 1px -1px 0 white, -1px -1px 0 white, 0px 1px 0 white, 0px -1px 0 white, -1px 0px 0 white, 1px 0px 0 white, 1px 1px 0 white, -1px 1px 0 white, 1px -1px 0 white, -1px -1px 0 white, 0px 1px 0 white, 0px -1px 0 white, -1px 0px 0 white, 1px 0px 0 white, 1px 1px 0 white, -1px 1px 0 white, 1px -1px 0 white, -1px -1px 0 white, 1px 1px 0 white, -1px 1px 0 white, 1px -1px 0 white, -1px -1px 0 white
-	}
+  .pyrocont:hover+.popup2 {
+    visibility: visible
+  }
+
+  :root {
+    --shadow: 1px 1px 0 white, -1px 1px 0 white, 1px -1px 0 white, -1px -1px 0 white, 0px 1px 0 white, 0px -1px 0 white, -1px 0px 0 white, 1px 0px 0 white, 1px 1px 0 white, -1px 1px 0 white, 1px -1px 0 white, -1px -1px 0 white, 0px 1px 0 white, 0px -1px 0 white, -1px 0px 0 white, 1px 0px 0 white, 1px 1px 0 white, -1px 1px 0 white, 1px -1px 0 white, -1px -1px 0 white, 1px 1px 0 white, -1px 1px 0 white, 1px -1px 0 white, -1px -1px 0 white
+  }
 </style>
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
-	$('#change-image-button').click(function() {
+  $('#change-image-button').click(function() {
     var imgSrc = prompt("Profile picture URL", "");
     if (imgSrc != null) {
       $(".iconimg").attr('src', imgSrc);
